fix: block main content scroll on tablet when sidebar open

--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -1,6 +1,6 @@
 @use 'variables' as *;
 
-@media (min-width: 768px) and (max-width: 1365px) {
+@media (max-width: 1365px) {
   body.no-scroll {
     overflow: hidden;
   }
