--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -24,6 +24,7 @@
   top: 0;
   left: 0;
   z-index: 99;
+  overflow-y: auto;
   width: 320px;
   height: 100vh;
   background-color: $color-white;
